Sidebar overlap fix and CC license update

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -8,6 +8,8 @@
   margin-top: 2em;
   padding-left: 1em;
   padding-right: 1em;
+  min-height: 100vh;
+  padding-bottom: 4em;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
